asg/tests/fail/statements/const_declaration_fail.leo
function main() {
    const x = 1u32;
}